# research_optflow

./: .gitignore  .pre-commit-config.yaml  Makefile  generate_latent_dataset.py  test_configs.py  train.py  train_diffusion.py  train_diffusion.sh  train_vae.py  train_vae.sh
conf/: config.py  config.yaml  diffusion_sampling_config.yaml  reconstruction_config.yaml  sampling_config.yaml
conf/dataset/: dora.yaml  latent.yaml
scripts/: .gitkeep  generate_latent_dataset.py  make_dataset.py  make_latent_dataset.py  reconstruct_mesh.py  sample_diffusion_model.py  test_configs.py
src/: pyproject.toml
src/optflow/common/: __init__.py  cross_attention.py  mlp.py  positional_encoding.py  self_attention.py
src/optflow/diffusion/: latent_dataset.py  model.py  noise_scheduler.py
src/optflow/dora/: __init__.py  attention.py  decoder.py  encoder.py  model.py  sap.py
src/optflow/dora/dataset/: dataset.py  sampling.py
src/optflow/utils/: h5_dataset.py  sap_utils.py  time.py
train/: diffusion.py  vae.py
