[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "optflow"
description = "Research Opt-Flow"
version = "0.0.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch",
    "pyvista[io,jupyter]",
    "h5py",
    "pandas",
    "hydra-core",
    "torch-cluster",
    "fpsample",
    "point-cloud-utils",
    "scikit-image",
    "tqdm",
    "mlflow",
    "physicsx.pxs[cuda-12,experimental-acheron,opora]==0.28.0-dev.6",
]

[tool.setuptools.dynamic.version]
attr = "optflow.__version__"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 100
exclude = ["docs/", "tests/"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "ARG"]
ignore = ["D205"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pydocstyle]
convention = "google"
